--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BA Tour</title>
+        <link rel="icon" type="image/png" href="Imagenes/Logo BA.png">    
     <link rel="stylesheet" href="css/styles.css" />
     <link
       rel="stylesheet"
