--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BA Tour</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="img/Logo2.ico" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -15,16 +16,17 @@
     <nav class="navbar">
       <div class="container">
         <div class="logo">
-          <h1>Buenos Aires Tour</h1>
+          <!-- <h1>Buenos Aires Tour</h1> -->
+          <img src="img/LOGO_BA.png" alt="Logo BA Tour" height="65" />
         </div>
         <div class="menu-toggle">
           <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-menu">
-          <li><a href="#" class="active">Inicio</a></li>
-          <li><a href="#packages">Paquetes</a></li>
-          <li><a href="#about">Nosotros</a></li>
-          <li><a href="#contact">Contacto</a></li>
+          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="packages.html">Paquetes</a></li>
+          <li><a href="about.html">Nosotros</a></li>
+          <li><a href="contact.html">Contacto</a></li>
         </ul>
       </div>
     </nav>
@@ -58,7 +60,7 @@
               </p>
               <div class="package-footer">
                 <p class="price">Desde $120,000</p>
-                <a href="#contact" class="btn btn-secondary">Consultar</a>
+                <a href="packages.html" class="btn btn-secondary">Consultar</a>
               </div>
             </div>
           </div>
@@ -78,7 +80,7 @@
               </p>
               <div class="package-footer">
                 <p class="price">Desde $120,000</p>
-                <a href="#contact" class="btn btn-secondary">Consultar</a>
+                <a href="packages.html" class="btn btn-secondary">Consultar</a>
               </div>
             </div>
           </div>
@@ -98,13 +100,13 @@
               </p>
               <div class="package-footer">
                 <p class="price">Desde $120,000</p>
-                <a href="#contact" class="btn btn-secondary">Consultar</a>
+                <a href="packages.html" class="btn btn-secondary">Consultar</a>
               </div>
             </div>
           </div>
         </div>
         <div class="cta-container">
-          <a href="#contact" class="btn btn-primary">Más paquetes</a>
+          <a href="packages.html" class="btn btn-primary">Más paquetes</a>
         </div>
       </div>
     </section>
@@ -135,43 +137,9 @@
     <section id="contact" class="contact">
       <div class="container">
         <h2 class="section-title">Contacto</h2>
-        <div class="contact-container">
-          <div class="contact-info">
-            <div class="info-item">
-              <i class="fas fa-map-marker-alt"></i>
-              <p>Av. Rivadavia 1234, Ituzaingó, Buenos Aires</p>
-            </div>
-            <div class="info-item">
-              <i class="fas fa-phone"></i>
-              <p>+54 11 4567-8900</p>
-            </div>
-            <div class="info-item">
-              <i class="fas fa-envelope"></i>
-              <p>info@batour.com</p>
-            </div>
-            <div class="info-item">
-              <i class="fas fa-clock"></i>
-              <p>Lun-Vie: 9:00 - 18:00<br />Sáb: 10:00 - 14:00</p>
-            </div>
-          </div>
-          <div class="contact-form">
-            <form>
-              <div class="form-group">
-                <input type="text" placeholder="Nombre completo" required />
-              </div>
-              <div class="form-group">
-                <input type="email" placeholder="Email" required />
-              </div>
-              <div class="form-group">
-                <input type="tel" placeholder="Teléfono" />
-              </div>
-              <div class="form-group">
-                <textarea placeholder="Mensaje" rows="5" required></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">
-                Enviar consulta
-              </button>
-            </form>
+        <div class="contact-text">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis optio, enim tempora eum magni perspiciatis. Veritatis consequuntur totam provident impedit, repudiandae labore culpa soluta at, nulla eaque iusto praesentium sint.</p>
+          <a href="contact.html" class="btn btn-secondary">Contactar</a>
           </div>
         </div>
       </div>
@@ -188,10 +156,10 @@
           <div class="footer-links">
             <h3>Enlaces rápidos</h3>
             <ul>
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#packages">Paquetes</a></li>
-              <li><a href="#about">Nosotros</a></li>
-              <li><a href="#contact">Contacto</a></li>
+              <li><a href="index.html" class="active">Inicio</a></li>
+              <li><a href="packages.html">Paquetes</a></li>
+              <li><a href="about.html">Nosotros</a></li>
+              <li><a href="contact.html">Contacto</a></li>
             </ul>
           </div>
           <div class="footer-social">
