SUBIENDO TURISMO PHP

--- a/about.html
+++ b/about.html
@@ -16,16 +16,20 @@
     <nav class="navbar">
       <div class="container">
         <div class="logo">
-          <h1>Buenos Aires Tour</h1>
+          <a href="index.php">
+            <h1>Buenos Aires Tour</h1>
+          </a>
         </div>
         <div class="menu-toggle">
           <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-menu">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="packages.html">Paquetes</a></li>
+          <li><a href="index.php">Inicio</a></li>
+          <li><a href="packages.php">Paquetes</a></li>
           <li><a href="about.html" class="active">Nosotros</a></li>
           <li><a href="contact.html">Contacto</a></li>
+          <li><a href="form_register.php">Registrarse</a></li>
+          <li><a href="form_login.php">Iniciar Sesión</a></li>
         </ul>
       </div>
     </nav>
@@ -288,10 +292,12 @@
           <div class="footer-links">
             <h3>Enlaces rápidos</h3>
             <ul>
-              <li><a href="index.html">Inicio</a></li>
-              <li><a href="packages.html">Paquetes</a></li>
+              <li><a href="index.php">Inicio</a></li>
+              <li><a href="packages.php">Paquetes</a></li>
               <li><a href="about.html" class="active">Nosotros</a></li>
               <li><a href="contact.html">Contacto</a></li>
+              <li><a href="form_register.php">Registrarse</a></li>
+              <li><a href="form_login.php">Iniciar Sesión</a></li>
             </ul>
           </div>
           <div class="footer-social">
