--- a/gracias.html
+++ b/gracias.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BA Tour - ¡Gracias por registrarte!</title>
-    <link rel="icon" type="image/png" href="Imagenes/Logo2.png">    
+    <link rel="icon" type="image/png" href="Imagenes/Logo2.png" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="img/Logo2.ico" type="image/x-icon">
+    <link rel="icon" href="img/Logo2.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -77,9 +77,8 @@
         <ul class="nav-menu">
           <li><a href="index.php">Inicio</a></li>
           <li><a href="packages.php">Paquetes</a></li>
-          <li><a href="about.html">Nosotros</a></li>
-          <li><a href="contact.html">Contacto</a></li>
-          <li><a href="form_register.php">Registrarse</a></li>
+          <li><a href="about.php">Nosotros</a></li>
+          <li><a href="contact.php">Contacto</a></li>
           <li><a href="form_login.php">Iniciar Sesión</a></li>
         </ul>
       </div>
@@ -94,9 +93,11 @@
           </div>
           <h1 class="thank-you-title">¡Muchas gracias por registrarte!</h1>
           <p class="thank-you-message">
-            Tu registro se ha completado exitosamente. Ahora puedes acceder a todas las funcionalidades de BA Tour y comenzar a planificar tus próximas aventuras.
+            Tu registro se ha completado exitosamente. Ahora puedes acceder a
+            todas las funcionalidades de BA Tour y comenzar a planificar tus
+            próximas aventuras.
           </p>
-          <a href="login.html" class="btn btn-primary">Iniciar sesión</a>
+          <a href="login.php" class="btn btn-primary">Iniciar sesión</a>
         </div>
       </div>
     </section>
@@ -114,10 +115,10 @@
             <ul>
               <li><a href="index.php">Inicio</a></li>
               <li><a href="packages.php">Paquetes</a></li>
-              <li><a href="about.html">Nosotros</a></li>
-              <li><a href="contact.html">Contacto</a></li>
-              <li><a href="register.html">Registrarse</a></li>
-              <li><a href="login.html">Iniciar Sesión</a></li>
+              <li><a href="about.php">Nosotros</a></li>
+              <li><a href="contact.php">Contacto</a></li>
+              <li><a href="register.php">Registrarse</a></li>
+              <li><a href="login.php">Iniciar Sesión</a></li>
             </ul>
           </div>
           <div class="footer-social">
@@ -137,4 +138,4 @@
     </footer>
     <script src="js/functions.js"></script>
   </body>
-</html> 
+</html>
