--- a/formulario_busqueda.html
+++ b/formulario_busqueda.html
@@ -141,7 +141,7 @@
 
     <!-- Formulario de Búsqueda -->
     <div class="search-form">
-      <form id="searchForm">
+      <form id="searchForm" method="post" action="armar_paquetes.php">
         <!-- Selección de Tipo de Hospedamiento -->
         <div class="form-section">
           <h2><i class="fas fa-bed"></i> Tipo de Hospedaje</h2>
@@ -199,8 +199,8 @@
             </div>
 
             <div class="form-group">
-              <label for="pileta">Incluye Desayuno</label>
-              <select id="pileta" name="pileta">
+              <label for="desayuno">Incluye Desayuno</label>
+              <select id="desayuno" name="desayuno">
                 <option value="">Seleccionar Desayuno</option>
                 <option value="si">Sí</option>
                 <option value="no">No</option>
